--- a/index.html
+++ b/index.html
@@ -26,6 +26,54 @@
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
     <div class="article8">
+      <h2 class="article">Shrek 5 Is Being Released</h2>
+      <p class="text">Image from <a href="https://www.polygon.com/2017/3/31/15141312/shrek-5-reinvent-franchise-dreamworks">Polygon</a></p>
+      <img src="shrek5.webp" alt="shrek 5, image from polygon">
+      <h4 class="text">
+        Shrek 5 is coming out in theaters. After popular demand,<br> the public requested that there should be a Shrek 5. Fans<br> realised that Shrek Forever After wasn't enough. This<br> brought Dreamworks attention so they gathered Eddie<br> Murphy (Donkey), Mike Myers (Shrek), Cameron Diaz<br> (Fiona), and the rest of the Shrek cast to start filming<br> and animating the movie. Shrek fans do everything to<br> honor Shrek, they vary from Shrek meetups, you see<br> profile pictures of Shrek, even they came up with a<br> new phrase called Shrexy. So, as you can see Shrek<br> has grown over the years and after Dreamworks<br> announced that Shrek 5 is coming out the fan base<br> grew even more. The fans are elated for the movie<br> to be released in September 2022.
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:221092@students.srvusd.net">Blake Bortoli</a>
+    </div>
+    <div class="article12">
+      <h2 class="article">Shaquille O’Neal on Joe Rogan’s car crash in Greenland
+      </h2>
+      <p class="text">Image from <a href="https://www.insideedition.com/girl-known-as-side-eyeing-chloe-selling-famous-meme-as-nft-70083">Inside Edition</a></p>
+      <img src="carseatgirl.webp" alt="Car seat girl from: inside edition">
+      <h4 class="text">
+        Joe Rogan was driving his 2002 Honda Civic near<br> a pack of Psychopathic ducks when a duck ran<br> in front of his car. Of course Joe would not hurt a<br> fly so he quickly served to the right to avoid the<br> near helpless quaker but that is not even the worst<br> part. Since he was driving next to an ice fishing pond<br> and his car was on the ice he hit 9 of the 82 ice fishers<br> there until his car hit another duck so it stopped. Though<br> that is still not the worst part (Well I guess it is) because<br> one of the people that he hit was none other than the<br> girl from the carseat meme (She and another duck were<br> found in a frozen block of ice, and of course they were<br> dead). Joe Rogan was sued 24 Million dollars in all from<br> about 840 professional memers. Shaquille O’Neal<br> commented on this incident saying quote, “If little Joey<br> hits another person he will have to face the consequences.<br> Thank you for reading this article and I hope you never<br> end up like Joey because Shaq will come for you.
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:219859@students.srvusd.net">Lucas Melo</a>
+        </h4>
+    </div>
+    <div class="article8">
+      <h2 class="article">Two Suns?</h2>
+      <p class="text">Image from <a href="mailto:220883@students.srvusd.net">Cassius Oto</a></p>
+      <img src="2 sun.jpg" alt="two suns: made by cash oto">
+      <h4 class="text">
+        Recently, the sun has been getting larger in some parts.<br>  This is believed to be because the sun, is splitting into two<br> wholes.  Scientists believe this is because of binary fission,<br> a form of asexual reproduction.  People are now questioning<br> if the sun is actually alive.  The estimated arrival date of the<br> second sun is august, 2023.  Scientist believe that it will not<br> affect the earth in any way.  This is because the second sun<br> is behind the first sun.  Scientist have developed a name for<br> name for this sun, and it is Sun 2, which is definitely different<br> then the first suns name, Sun 1.  Hopefully, Sun 2 is not larger<br> than Sun 1, because if it is, than Earth could instantly disintegrate.<br>  Readers, be careful for this sun. If it tries to disintegrate you,<br> don’t worry, call 911 and they should help you(if they haven’t<br>  been disintegrated already)
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:220883@students.srvusd.net">Cassius Oto</a>
+    </div>
+    <div class="article14">
+      <h2 class="article">The Hog Rider Has Quit Clash Royale
+      </h2>
+      <p class="text">Image from <a href="">Fold Magazine</a></p>
+      <img src="hogrider.webp" alt="hog rider: image from ">
+      <h4 class="text">
+        Hog Rider has quit Clash Royal After having a conflict<br> with an ram rider. Both after the tidal of rider they<br> got into an intense fight and resulted in ram rider<br> slowing down hog rider and making his hog into<br> bacon. Then the prince had the bacon for his dinner.
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:215908@students.srvusd.net">Ethan Ackerman</a>
+        </h4>
+    </div>
+    <div class="article8">
       <h2 class="article">Ronald Mcdonald Retires and Joins Burger King</h2>
       <p class="text">Image from <a href="https://www.mashed.com/202684/the-real-reason-mcdonalds-got-rid-of-ronald-mcdonald/">Mashed</a></p>
       <img src="ronald mcdonald.jpeg" alt="ronald mcdonald: image from mashed">
@@ -40,7 +88,7 @@
     <div class="article12">
       <h2 class="article">Ticonderoga recalled for “Dangerous Pencils”
       </h2>
-      <p class="text">Image from <a href="https://constructiveplaythings.com/ticonderogar-beginner-pencils-w-eraser">ConstructivePlayThings</a></p>
+      <p class="text">Image from <a href="https://constructiveplaythings.com/ticonderogar-beginner-pencils-w-eraser">ConstructivePlayThings/a></p>
       <img src="ticeonderoga.webp" alt="ticeonderoga pencils from constructive play things">
       <h4 class="text">
         Students at Rock Middle school have reported several<br> cases of unsafe pencils during Mr. Bush’s core class.<br> Injuries related to products of Ticonderoga have included;<br> Digestion problems, Neurological damage, Cardiovascular<br> problems, and severe memory loss. Cases reported related<br> to these problems have all included a student using the<br> pencil to stab their skin. Ticonderoga scientists were sent to<br> the case, investigating the substance of the pencil that might<br> contain high levels of toxins. As of Friday, scientists have<br> found 43 types of toxins located in the pencil. Ticonderoga<br> pencils as of 4:38 PM have been removed from shelves<br> and schools. 
