--- a/index.html
+++ b/index.html
@@ -60,6 +60,19 @@
         This article was written by
         <a href="mailto:220883@students.srvusd.net">Cassius Oto</a>
     </div>
+    <div class="article15">
+      <h2 class="article">Dwayne Johnson Injures His Eyebrow<br> Due to Rockfaceitis?
+      </h2>
+      <p class="text">Image from <a href="https://memes.co.in/memes/trending/the-rock-reaction-meme-eyebrow-raise-download/">Memes.Co.In</a></p>
+      <img src="therock.jpg" alt="the rock eyebrow raise from memes.co.in">
+      <h4 class="text">
+        On Sunday, March 6, Dwayne Johnson posted a picture<br> of himself in the hospital on Instagram. The caption read<br> “#brokeneyebrowclub” This led to many people questioning<br> what happened. The next day, Silly Rabbit News did an<br> interview on Dwayne Johnson. “It was so unexpected, I was<br> just showing off my eyebrow to a fan when I suddenly heard<br> a crack!” The rock was rushed to the nearest hospital where<br> the doctor, Bardi C, performed emergency surgery which<br> allegedly saved the rock's life. Later, Bardi C named this<br> disease “rockface-itis.” According to scientists, the only cure<br> for rockface-itis is to eat 4 bags of takis and one pound of<br> cheese while drinking a caprisun. 
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:216531@students.srvusd.net">Ira Banga</a>
+        </h4>
+    </div>
     <div class="article14">
       <h2 class="article">The Hog Rider Has Quit Clash Royale
       </h2>
@@ -84,7 +97,7 @@
         <a href="mailto:216549@students.srvusd.net">Asher Lee</a>
     </div>
     </div>
-    <div class="article12">
+    <div class="article16">
       <h2 class="article">Ticonderoga recalled for “Dangerous Pencils”
       </h2>
       <p class="text">Image from <a href="https://constructiveplaythings.com/ticonderogar-beginner-pencils-w-eraser">ConstructivePlayThings/a></p>
@@ -95,6 +108,19 @@
       <h4 class="text">
         This article was written by
         <a href="mailto:216027@students.srvusd.net">Konnor Ly</a>
+        </h4>
+    </div>
+    <div class="article17">
+      <h2 class="article">World Class Soccer Player, Lucas<br> Melo Turns 12 Today
+      </h2>
+      <p class="text">Image from <a href="https://www.goodhousekeeping.com/life/a31816720/cute-birthday-instagram-captions/">GoodHouseKeeping</a></p>
+      <img src="bday.jpeg" alt="birthday from goodhousekeeping">
+      <h4 class="text">
+        World class soccer player Lucas Melo (PV) from Pine<br> Valley middle school turned 12 today as a writer,<br> friend and supporter of SMNews We say thank you<br> for your incredible support and happy birthday!
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>
         </h4>
     </div>
     <div class="article8">
@@ -109,20 +135,8 @@
         <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>
     </div>
     
-    <div class="article10">
-      <h2 class="article">Chimpanzees Invade North Korea After<br> Man Said He "hates chimpanzees"
-      </h2>
-      <p class="text">Image from <a href="https://www.worldwildlife.org/species/chimpanzee">WorldWildLife</a></p>
-      <img src="chimpanzee.jpeg" alt="chimpanzee">
-      <h4 class="text">
-        Chimpanzees have crowded small villages in North Korea<br> after man said he "hates chimpanzees." The chimpanzees<br> heard about this horrible man and quickly tracked him down.<br> They traveled across the sea from Africa to make sure that<br> man would get what he deserves. And he did. The man was<br> bombarded with chimapnzees who jumped on him and bit him<br> on his ears. A reporter who was recording this said that<br> "the man's ears were gone lol." During this attack, chimpanzees<br> came across other people who were eating bananas. Those<br> people lived to regret it. You see, the chimpanzees saw the<br> bananas and instantly went crazy. They took all the bananas<br> and chomped them all down. That day, there was so much<br> banana poop that the entire nation had to wear N95 masks<br> to not throw up every 2 seconds.
-      </h4>
-      <h4 class="text">
-        This article was written by
-        <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>
-        </h4>
-    </div>
-    <div class="article7">
+    
+    <div class="article18">
       <h2 class="article">Student Thinks she is the main character,<br> then breaks neck. Ending will shock you
       </h2>
       <p class="text">Image from <a href="https://en.wikipedia.org/wiki/Cafeteria">Wikipedia</a></p>
