--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="mailto:221092@students.srvusd.net">Blake Bortoli</a>
     </div>
     <div class="article12">
-      <h2 class="article">Shaquille O’Neal on Joe Rogan’s car crash in Greenland
+      <h2 class="article">Shaquille O’Neal on Joe Rogan’s<br> Car crash in Greenland
       </h2>
       <p class="text">Image from <a href="https://www.insideedition.com/girl-known-as-side-eyeing-chloe-selling-famous-meme-as-nft-70083">Inside Edition</a></p>
       <img src="carseatgirl.webp" alt="Car seat girl from: inside edition">
@@ -110,20 +110,7 @@
         <a href="mailto:216027@students.srvusd.net">Konnor Ly</a>
         </h4>
     </div>
-    <div class="article17">
-      <h2 class="article">World Class Soccer Player, Lucas<br> Melo Turns 12 Today
-      </h2>
-      <p class="text">Image from <a href="https://www.goodhousekeeping.com/life/a31816720/cute-birthday-instagram-captions/">GoodHouseKeeping</a></p>
-      <img src="bday.jpeg" alt="birthday from goodhousekeeping">
-      <h4 class="text">
-        World class soccer player Lucas Melo (PV) from Pine<br> Valley middle school turned 12 today as a writer,<br> friend and supporter of SMNews We say thank you<br> for your incredible support and happy birthday!
-      </h4>
-      <h4 class="text">
-        This article was written by
-        <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>
-        </h4>
-    </div>
-    <div class="article8">
+    <div class="article20">
       <h2 class="article">Ronald Mcdonald Retires and Joins Burger King</h2>
       <p class="text">Image from <a href="https://www.mashed.com/202684/the-real-reason-mcdonalds-got-rid-of-ronald-mcdonald/">Mashed</a></p>
       <img src="ronald mcdonald.jpeg" alt="ronald mcdonald: image from mashed">
@@ -175,20 +162,7 @@
         <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
     </div>
     
-    <div class="article2">
-      <h2 class="article">
-        Students at Rock Middle Schools Go On Strike
-      </h2>
-      <p class="text">Image from <a href="https://www.latimes.com/politics/story/2020-06-11/young-people-joined-george-floyd-protests-but-will-they-vote">LA Times</a></p>
-      <img src="protestingpeople.jpeg" alt="people protesting from LA TIMES" />
-      <h4 class="text">
-        Students at rock middle school reportedly went on strike<br> after a bird flew into the cafeteria on Wednesday during<br> their lunch break. As you know students at Rock Middle<br> school are provided with a complimentary lunch on<br> wednesdays. According to the New York Times “This<br> naughty bird allegedly took a dump on 3 student’s<br> lunches and ruined the entire day.” The students went<br> hungry and are now going on strike in front of the<br> school. If you would like to support this cause you<br> can go up to their front office and ask them to sign<br> the petition to make lunch great again.
-      </h4>
-      <h4 class="text">
-        This article was written by
-        <a style="margin: 0px;"href="mailto:219915@students.srvusd.net">Nathan Chow</a>
-      </h4>
-    </div>
+    
     <!--<div class="article3">
       <h2 class="article">Ukrainians Continue to Battle For Kyiv</h2>
       <img src="Ukrainevsrussia.webp" alt="Ukraine fights against Russia" />
@@ -206,6 +180,20 @@
     </div>
   -->
   <iframe class="googleform" src="https://docs.google.com/forms/d/e/1FAIpQLSfA7GHgpkrLDjDglSHmdldsfRLwFPTSEYxq9gZY5RiGhVhp1g/viewform?embedded=true" width="640" height="462" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <div class="article2">
+    <h2 class="article">
+      New Gender Discovered
+    </h2>
+    <p class="text">Image from <a href="">Alamy</a></p>
+    <img src="t0k8e1.jpg" alt="shrek baby" />
+    <h4 class="text">
+      There is a new gender that has been discovered. It is<br> called the Shrek gender, scientists found that the<br> population of the gender is 50 but it is slowly increasing<br> by the day. This gender can only be produced by the<br> one and only Shrek and his ancestors. The offspring<br> is formed into an identical baby Shrek. There are<br> several lab studies about this odd gender and scientists<br> are starting to adapt what they are doing. The average<br> day of a Shrek is to stay in their swamp, not be bothered,<br> and sleep. Scientists are starting to love the lifestyle of<br> this Shrek gender that to this day over 1500 scientists<br> have quit their job and started to do what they are doing.
+    </h4>
+    <h4 class="text">
+      This article was written by
+      <a style="margin: 0px;"href="mailto:221092@students.srvusd.net">Blake Bortoli</a>
+    </h4>
+  </div>
     <footer class="footer" style="text-align: center;">
       <?xml version="1.0" encoding="iso-8859-1"?>
 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
