--- a/index.html
+++ b/index.html
@@ -26,6 +26,78 @@
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
     <div class="article8">
+      <h2 class="article">The Shrek Gender Is Taking Over The World!</h2>
+      <p class="text">Image from <a href="https://www.redbubble.com">RedBubble</a></p>
+      <img src="shrekcup.jpeg" alt="shrekcup">
+      <h4 class="text">
+        The Shrek gender is taking over the world! In a matter<br> of a day the Shrek gender has grown from 50 to 50,000<br> and this wasn't from Shrek and his ancestors producing<br> them this is from a new virus. This virus is called the<br> Shrekonavirus. It is taking the world by storm. People<br> are already sick of Covid-19 and now they have to go<br> through the Shrekonavirus. To prevent getting the<br> Shrekonavirus you have to wear a medical bodysuit and<br> three N95 masks. This can be spread through a<br> Shrek touching you. The numbers are also increasing<br> because of people wanting to become Shrek. This is<br> becoming a Shrek apocalypse and people need to spread<br> the word to be safe.
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="">Blake Bortoli</a>
+    </div>
+    <div class="article12">
+      <h2 class="article">The Great Wall Falls
+      </h2>
+      <p class="text">Image from <a href="https://www.dailymail.co.uk/news/article-2185408/The-Great-Wall-China-Bungling-workmen-trigger-collapse-100ft-section-historic-fortifications.html">DailyMail</a></p>
+      <img src="breakgreatwall.jpeg" alt="great wall breaking">
+      <h4 class="text">
+        After 3 years of constant riots against China a single<br> middle aged woman finally collapsed the great wall of<br> China. She say her motives were blaming them for<br> "These hideous things" what she was referring to is still<br> unknown as after the wall collapsed due to an unstable<br> structure they were detained. People all around the world<br> are saying that it was justified as it would have collapsed<br> anyway because of the idiotdic tourists taking it apart<br> brick by brick. The Chinese government have avoided<br> elaborating as they concoct a cover up saying that it was<br> destroyed by a troop of American soldiers in an attempt<br> to kill thousands. The state of the woman responsible<br> is currently unknown as the president focuses on more<br> pressing matters like banning any and all Winnie the Pooh<br> merchandise.
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="">Dylan Goldstein</a>
+        </h4>
+    </div>
+    <div class="article8">
+      <h2 class="article">Minecraft is Going Bankrupt</h2>
+      <p class="text">Image from <a href="https://www.makeuseof.com/microsoft-minecraft-south-korea-ban/">MakeUseOf</a></p>
+      <img src="minecraft is banned.webp" alt="minecraft banned">
+      <h4 class="text">
+        Due to a sudden surge of people buying the new iphones,<br> and ipads, people have been only playing mobile games<br> on their new apple products. This sudden surge in mobile<br> games has greatly increased the networth of games like<br> brawl stars, clash royale, but not Minecraft. The current<br> owner of apple (Tim Cook), had a feud with Minecraft’s<br> current owner (Markus Persson), because they both went<br> on a date, but it ended with them breaking up for an unknown<br> reason, so apple decided not to let Minecraft be available<br> on their mobile apple products. This greatly impacted<br> Markus Persson so much that in the next few days,<br> Minecraft is bound to go bankrupt. With only 50 cents<br> left in their 1 stock, they have no chance of coming back<br> on the leaderboard. Everyone, wish your final goodbye to Minecraft…
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="">Krish Jaisingh</a>
+    </div>
+    <div class="article12">
+      <h2 class="article">Kool-Aid vs Gatorade, The Final Battle
+      </h2>
+      <p class="text">Image from <a href="https://drawception.com/game/qHTDgZ9nXC/kool-aid-man-but-sad/">Drawception</a></p>
+      <img src="sadkoolaid.png" alt="sad kool aid">
+      <h4 class="text">
+        The organization for Gatorade is causing people to catch<br> Alkaptonuria (Black Urine Disease) and is now beefing with<br> Kool-Aid. ¨Imagine causing Alkaptonuria because of your<br> drinks, could not be us¨ Kool-Aid says. Then, Gatorade<br> replies ¨ratio bozo, get better flavors.¨ ¨Massive L +<br> you're a better hair dye than drink +How about you stop<br> fighting me and start fighting for some girls.¨ Kool-Aid<br> replied. Soon after Gatorade started suing Kool-Aid<br> for bullying. 
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="">Aleesha Mohib</a>
+        </h4>
+    </div>
+    <div class="article8">
+      <h2 class="article">Stories of Shrek 5</h2>
+      <p class="text">Image from <a href="https://www.polygon.com/2017/3/31/15141312/shrek-5-reinvent-franchise-dreamworks">Polygon</a></p>
+      <img src="shrek5.webp" alt="shrek5">
+      <h4 class="text">
+        As we have heard, Shrek 5 is coming out. Here at the<br> Roc Middle School are conducting peaceful protests<br> saying that the school should play the movie on in<br> the MPR for the entire school day. Luke Hoffman Age<br> 12 says ¨This needs to happen otherwise there will be<br> another strike. However the Principle Woods says¨This<br> will not be permitted due to the fact that the 7th Grader<br> has a field trip to the movies to watch the original shrek.¨<br> What was recently leaked was that hog rider is somehow<br> in the movie. Together with stars from both worlds this<br> movie is set to be the most watched movie in America.<br> Credix are raving about how good the movie will be.   
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="">Ethan Ackerman</a>
+    </div>
+    <div class="article12">
+      <h2 class="article">Kids Are Going to Take Over The World
+      </h2>
+      <p class="text">Image from <a href="https://en.wikipedia.org/wiki/Earth">Wikipedia</a></p>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/The_Blue_Marble_%28remastered%29.jpg/440px-The_Blue_Marble_%28remastered%29.jpg" alt="Car seat girl from: inside edition">
+      <h4 class="text">
+        Kids are going to take over the world, you won't believe<br> what happens next. The NBA in 1969 was like elementary<br> kids now, a kid playing fortnite is better than an adult playing<br> fortnite now. Even KID singers are better than adult singers<br> and kids are now trying to run for president and has more<br> votes than Joe Biden, Will this be the end of millennial Adults?
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="">Adam El Shafei</a>
+        </h4>
+    </div>
+    <div class="article8">
       <h2 class="article">Shrek 5 Is Being Released</h2>
       <p class="text">Image from <a href="https://www.polygon.com/2017/3/31/15141312/shrek-5-reinvent-franchise-dreamworks">Polygon</a></p>
       <img src="shrek5.webp" alt="shrek 5, image from polygon">
@@ -179,7 +251,7 @@
       </h4> 
     </div>
   -->
-  <iframe class="googleform" src="https://docs.google.com/forms/d/e/1FAIpQLSfA7GHgpkrLDjDglSHmdldsfRLwFPTSEYxq9gZY5RiGhVhp1g/viewform?embedded=true" width="640" height="462" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <iframe class="googleform"src="https://docs.google.com/forms/d/e/1FAIpQLScBezeED4tepU0xG6zJokIklOEJjqmlKPkZ7ZgGh8LOLXqGJA/viewform?embedded=true" width="640" height="486" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   <div class="article2">
     <h2 class="article">
       New Gender Discovered
@@ -194,6 +266,7 @@
       <a style="margin: 0px;"href="mailto:221092@students.srvusd.net">Blake Bortoli</a>
     </h4>
   </div>
+  <iframe class="googleform"src="https://docs.google.com/forms/d/e/1FAIpQLSesvmkDo8D_ekcPRqgTSHRYrjiQmjIjK6pLNDcz2-CidDvIRw/viewform?embedded=true" width="640" height="573" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     <footer class="footer" style="text-align: center;">
       <?xml version="1.0" encoding="iso-8859-1"?>
 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
