--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </h4>
       <h4 class="text">
         This article was written by
-        <a href="">Aleesha Mohib</a>
+        <a href="">Aleesa Mohib</a>
         </h4>
     </div>
     <div class="article8">
