--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       <h1><a href="index.html" class="home">Home</a></h1>
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
+    <h1 class="mainheader"><center>One Month Anniversary of SMNews</center></h1>
+    <h3 class="thanks">It's already been a month<br> since SMNews was founded.<br> I want to thank the SMNews<br> team for making this possible.<br> Hopefully we will continue to do<br> this amazing work and eventually<br> reach our goal of getting on the<br> actual news. Continue to spread<br> the word to your friends and help<br> make SMNews the biggest news<br> station on earth!<br> - The SMNews Team</h3>
+    <h3 class="rightarticle">Here we are, a month after SMNews was founded.<br> We would like to thank the people who have been<br> ever so kind to us and helped our SMNews community.<br> I'm proud to announce that SMNews is now known<br> to Jeff Bezos, Elon musk, and Selena Gomez, along<br> with the CEOs of a few other companies. CEO: Arjun<br> Mehrotra says “ I wouldn’t have been able to make<br> this happen without my original monke team. Ever since<br> we started, SMNews has grown so much, I couldn’t<br> be more proud.” SMNews has risen ever so much and<br> the whole world is waiting to see what groundbreaking<br> stories that the team will write next. - Message By Aditi Bhuman</h3>
+    <img src="sm news logo.png" alt="logo" style="width: 400px;">
     <h1 class="articlenames"><u>Rock Middle School</u></h2>
       <div class="article8">
         <h2 class="article">Students at Rock Middle School Outraged<br> Over The Mile Tests.
