--- a/index.html
+++ b/index.html
@@ -25,11 +25,39 @@
       <h1><a href="index.html" class="home">Home</a></h1>
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
-    <h1 class="mainheader"><center>One Month Anniversary of SMNews</center></h1>
-    <h3 class="thanks">It's already been a month<br> since SMNews was founded.<br> I want to thank the SMNews<br> team for making this possible.<br> Hopefully we will continue to do<br> this amazing work and eventually<br> reach our goal of getting on the<br> actual news. Continue to spread<br> the word to your friends and help<br> make SMNews the biggest news<br> station on earth!<br> - The SMNews Team</h3>
-    <h3 class="rightarticle">Here we are, a month after SMNews was founded.<br> We would like to thank the people who have been<br> ever so kind to us and helped our SMNews community.<br> I'm proud to announce that SMNews is now known<br> to Jeff Bezos, Elon musk, and Selena Gomez, along<br> with the CEOs of a few other companies. CEO: Arjun<br> Mehrotra says “ I wouldn’t have been able to make<br> this happen without my original monke team. Ever since<br> we started, SMNews has grown so much, I couldn’t<br> be more proud.” SMNews has risen ever so much and<br> the whole world is waiting to see what groundbreaking<br> stories that the team will write next. - Message By Aditi Bhuman</h3>
-    <img src="sm news logo.png" alt="logo" style="width: 400px;">
-    <h1 class="articlenames"><u>Rock Middle School</u></h2>
+    <center>
+    <div class="toparticle">
+      <h2 class="article">All of Rock Middle School’s Students<br> Test Positive for Vorona Cirus.
+      </h2>
+      <p class="text">Image from <a href="https://www.fda.gov/food/food-safety-during-emergencies/food-safety-and-coronavirus-disease-2019-covid-19">FDA</a></p>
+      <img src="https://www.fda.gov/files/Coronavirus_3D_illustration_by_CDC_1600x900.png" alt="corona">
+      <h4 class="text">
+        An unnamed, potentially deadly virus has found its way into one of the most dangerous places on earth. Did this deadly virus make its way into military bases?<br> No, this deadly virus has made its way into Rock Middle School. Rock Middle School is located at 37.2431° N, 115.7930° W, and although it’s found in the middle of nowhere<br> in Nevada, that doesn’t mean this Middle school is alive. Many students found at this Middle School have either been amputated with Ticonderoga pencils by “The Doctor’s<br> who wear those blue masks”, or smothered with poop. Now, not being able to take dumps in toilets isn’t the only problem found at Rock Middle School, the more<br> recent and deadly problem comes from Vorona Cirus. Vorona Cirus (VC) is a highly mutated version of COVID-19’s baby with Influenza.<br> This dangerous concoction of deadly and contagious diseases has already made some students flee to Loompa Land.<br> VC has been able to terrorize Rock Middle School, and although extremely inhumane, Joe Biden has decided to ultimately keep the students to die,<br> so VC will be eradicated. With a reluctant sigh, bid a sorrowful goodbye to the students at Rock Middle School… but what about the ones in Loompa Land? Find out soon. 
+      </h4>
+      <h4 class="text" style="font-size: larger;">
+        This article was written by
+        <a href="">Asher Lee</a>
+        </h4>
+    </div>
+    
+  </center>
+  <div class="article8">
+    <h2 class="article">Kids Are Going To Take Over The World...<br> Continued
+    </h2>
+    <p class="text">Image from <a href="https://www.dreamstime.com/portrait-evil-kid-girl-children-emotions-concept-portrait-shouting-evil-kid-girl-children-emotions-concept-image184717509">DreamsTime</a></p>
+    <img src="https://thumbs.dreamstime.com/b/portrait-evil-kid-girl-children-emotions-concept-portrait-shouting-evil-kid-girl-children-emotions-concept-184717509.jpg" alt="evil kid">
+    <h4 class="text">
+      Kids are going to take over the world, Continued, I<br> just heard that now kids  won the election and are now<br> making games like minecraft and fortnite have to be<br> played at least 2 hours each day, the craziest thing has<br> yet to come, they are now banning school from 49/50<br> states, the last state is rhode island which is now causing<br> tons of people to move to rhode island making the<br> government having to buy more land. I just heard on live<br> news that the government bought all of France and now<br> said that they will take over all the seven wonders of the<br> world, Now people are moving there for an education.<br> The final thing I have to say is, the U.S now interrupted<br> the war between Russia and Ukraine and now are trying<br> to convince Russia to stop fighting and they will give Russia<br> land FOR FREE. This might be the best offer yet and maybe,<br> they will stop fighting. Finally, the only other school that is<br> not banned is rock middle, we think that that is the school<br> where these kids learn.
+    </h4>
+    <h4 class="text">
+      This article was written by
+      <a href="">Adam El Shafei</a>
+      </h4>
+  </div>
+  <iframe class="googleform"src="https://docs.google.com/forms/d/e/1FAIpQLSc3oeeBPJZm1Fli6MF6A_sw3CnrZGEfoeYA3FzvgTnESlOhMg/viewform?embedded=true" width="640" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <center>
+    <h4 style="font-size: x-large"class="text">Email <u><a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a></u> if you would like to write articles for SMNews.</h4>
+  </center>
       <div class="article8">
         <h2 class="article">Students at Rock Middle School Outraged<br> Over The Mile Tests.
         </h2>
