--- a/index.html
+++ b/index.html
@@ -58,6 +58,25 @@
   <center>
     <h4 style="font-size: x-large"class="text">Email <u><a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a></u> if you would like to write articles for SMNews.</h4>
   </center>
+  <center>
+    <div class="toparticle">
+      <h2 class="article">Quandale Dingle Spotted at Chuck E. Cheese's
+      </h2>
+      <p class="text">Image from <a href="https://knowyourmeme.com/memes/quandale-dingle/photos">KnowYourMeme</a></p>
+      <img src="https://i.kym-cdn.com/photos/images/masonry/002/320/273/7a5.jpg" alt="quandale dingle from know your meme">
+      <h4 class="text">
+        According to local police Quandale Dingle was spotted at a Chuck E. Cheese. It has been said that he stole the prizes at the prize desk<br> and kept asking the animatronics strange questions. There are witnesses from Rock Middle School that have seen this coincidence, many girls there<br> tried to have a birthday party that day when it got interrupted by that strange man. This had become such a big problem that the entire S.W.A.T.<br> Team of the city had to come and hunt him down. Quandale has still not been arrested to this day and he is still roaming free in the wild. 
+      </h4>
+      <h4 class="text" style="font-size: larger;">
+        This article was written by
+        <a href="">Blake Bortoli</a>
+        </h4>
+    </div>
+  </center>
+  <center>
+    <h2 class="article">Subscribe to Me on YouTube: <u><a href="https://www.youtube.com/c/ArjunMehrotra/videos">Arjun Mehrotra</a></u></h2>
+  </center>
+  <center><iframe class="googleform2"src="https://docs.google.com/forms/d/e/1FAIpQLSexUW2-dfF_IRzszjFe-st_KuyVZi8dNPPmo3ApNJfo8UJWfQ/viewform?embedded=true" width="640" height="688" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
       <div class="article8">
         <h2 class="article">Students at Rock Middle School Outraged<br> Over The Mile Tests.
         </h2>
