--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
     <center>
+      <h2 class="article" style="font-size: x-large;">Do You Know What <u><a href="13.html">13 O-Clock News</a></u> Is?</h2>
+    </center>
+      <div class="article8">
+        <h2 class="article">Dangerous Criminals: Shrek; Armed and Dangerous
+        </h2>
+        <p class="text">Image from <a href="https://www.polygon.com/22434541/shrek-memes">Polygon</a></p>
+        <img src="https://cdn.vox-cdn.com/thumbor/CNLDJd5-M-WtOsYh_yugQ-S-FJs=/715x248:1689x721/1400x933/filters:focal(972x299:1278x605):no_upscale()/cdn.vox-cdn.com/uploads/chorus_image/image/69305239/shrek4_disneyscreencaps.com_675.0.jpg" alt="evil shrek">
+        <h4 class="text">
+          It is said that on February 20, 2022 a live Shrek was<br> caught on camera. Although the Shrek gender was<br> known of and that Shrek was real, very few have seen<br> him, let alone caught him on camera. That changed on an<br> evening of February where a hiker caught Shrek on<br> camera on Mt. Diablo. Several pictures were taken and it is<br> shown in the pictures that he has several weapons<br> holstered and sheathed around his waist. He did not<br> attack the hiker, but warned the hiker to “GET OUT<br> OF MY SWAMP” or he would be “shreked”. Bod Jiden<br> has ordered the S.W.A.T., F.B.I., C.I.A., and the S.M.N.P.D.<br> to find, contain, and escort Shrek to him. Not many<br> details are known, but Boe Jiden says that “The public<br> will be informed on the status of this situation very<br> soon.” More reports will be filed when said data<br> is released exclusively to SMNews.
+        </h4>
+        <h4 class="text">
+          This article was written by
+          <a href="">Sean Reynoso</a>
+          </h4>
+      </div>
+      <iframe class="googleform"src="https://docs.google.com/forms/d/e/1FAIpQLSdNVAzg6QQ3ZRi_LcgRhr-zjWKcAXFrbkhrbtOnEE_QTFQc0A/viewform?embedded=true" width="640" height="682" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <center>
     <div class="toparticle">
       <h2 class="article">All of Rock Middle School’s Students<br> Test Positive for Vorona Cirus.
       </h2>
