--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
     <center>
+      <div class="toparticle">
+        <h2 class="article">Man Say's Hes People's Mother and Dies
+        </h2>
+        <p class="text">Image from <a href="https://www.walmart.com/ip/Space-Jam-A-New-Legacy-Stretchy-Goo-Filled-Action-Figure-Lebron-James-Power-Up/396650345">Walmart</a></p>
+        <img src="https://i5.walmartimages.com/asr/9b43f8d2-8061-42c9-bc89-cee8b8b1d18f.296ffc9f71640708127531f9c26e1fbc.jpeg" alt="lebron james">
+        <h4 class="text">
+          A man named Lebron James was walking around a street saying that he was people's long lost mother. One day, he saw a person walking with their baby,<br> he saw them from the roof and said "MY BABY IS GETTING KIDNAPPED" and jumped off the roof. He lived and went to counseling and then he went to kiss<br> the counselor because he thought he was his son and then got infected by the Shreaknovirus and then got attacked by police. R.I.P.
+        </h4>
+        <h4 class="text" style="font-size: larger;">
+          This article was written by
+          <a href="">Liam Vetrovec</a>
+          </h4>
+      </div>
+    </center>
+    <center>
       <h2 class="article" style="font-size: x-large;">Do You Know What <u><a href="13.html">13 O-Clock News</a></u> Is?</h2>
     </center>
       <div class="article8">
