--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
     <center>
+      <iframe class="googleform2" src="https://docs.google.com/forms/d/e/1FAIpQLSc4vx8TZLWiaC_LmTNdcIGHz-_UjfcF4fi1IxWaIRyW4FX6Eg/viewform?embedded=true" width="640" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </center>
+    <center>
       <div class="toparticle">
         <h2 class="article"> The Study of Rock Middle School's Students Vorona Cirus
         </h2>
